wildfly-standalone-centos/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "adminUsername": {
        "type": "string",
        "metadata": {
          "description": "Linux VM user account name"
        }
      },
      "adminPassword": {
        "type": "securestring",
        "metadata": {
          "description": "Administrator password for Linux VM user account"
        }
      },
      "dnsLabelPrefix": {
        "type": "string",
        "metadata": {
          "description": "DNS Label for the Public IP. Must be lowercase. It should match with the following regular expression: ^[a-z][a-z0-9-]{1,61}[a-z0-9]$ or it will raise an error."
        }
      },
      "wildflyUserName": {
        "type": "string",
        "metadata": {
          "description": "User name for WildFly manager"
        }
      },
      "wildflyPassword": {
        "type": "securestring",
        "metadata": {
          "description": "Password for WildFly manager"
        }
      },
      "sshKeyData": {
        "type": "securestring",
        "metadata": {
          "description": "SSH RSA public key file as a string."
        }
      },
      "_artifactsLocation": {
        "type": "string",
        "metadata": {
          "description": "The base URI where artifacts required by this template are located. When the template is deployed using the accompanying scripts, a private location in the subscription will be used and this value will be automatically generated."
        },
        "defaultValue": "https://raw.githubusercontent.com/SpektraSystems/redhat-mw-cloud-quickstart/master/wildfly-standalone-centos/"
      },
      "_artifactsLocationSasToken": {
        "type": "securestring",
        "metadata": {
          "description": "The sasToken required to access _artifactsLocation.  When the template is deployed using the accompanying scripts, a sasToken will be automatically generated."
        },
        "defaultValue": ""
      },
      "location": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "Location for all resources."
        }
      },
      "vmSize": {
        "type": "string",
        "defaultValue": "Standard_F1",
        "metadata": {
          "description": "The size of the Virtual Machine."
        }
      }
    },
    "variables": {
      "singlequote": "'",
      "escapedQuote": "\"",
      "imagePublisher": "OpenLogic",
      "imageOffer": "CentOS",
      "imageSKU": "8.0",
      "baseName": "[uniquestring(parameters('dnsLabelPrefix'),resourceGroup().id)]",
      "nicName": "[concat('myNic8',variables('baseName'))]",
      "addressPrefix": "10.0.0.0/16",
      "subnet1Name": "Subnet-1",
      "subnet1Prefix": "10.0.0.0/24",
      "publicIPAddressName": "[concat('myIP8',variables('baseName'))]",
      "publicIPAddressType": "Dynamic",
      "vmName": "[parameters('dnsLabelPrefix')]",
      "virtualNetworkName": "MyVNET8",
      "frontEndNSGName": "[concat(parameters('dnsLabelPrefix'),'-nsg8')]",
      "storageAccountType": "Standard_LRS",
      "storageAccountName": "[concat('vsts8',variables('baseName'))]",
      "ScriptFolder": "scripts",
      "ScriptFileName": "wildfly-setup-redhat.sh",
      "subnet1Ref": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('subnet1Name'))]"
    },
    "resources": [
      {
        "type": "Microsoft.Storage/storageAccounts",
        "name": "[variables('StorageAccountName')]",
        "apiVersion": "2019-06-01",
        "location": "[parameters('location')]",
        "sku": {
          "name": "[variables('storageAccountType')]"
        },
        "kind": "Storage",
        "properties": {}
      },
      {
        "apiVersion": "2019-11-01",
        "type": "Microsoft.Network/publicIPAddresses",
        "name": "[variables('publicIPAddressName')]",
        "location": "[parameters('location')]",
        "properties": {
          "publicIPAllocationMethod": "[variables('publicIPAddressType')]",
          "dnsSettings": {
            "domainNameLabel": "[parameters('dnsLabelPrefix')]"
          }
        }
      },
      {
        "apiVersion": "2019-11-01",
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[variables('frontEndNSGName')]",
        "location": "[parameters('location')]",
        "tags": {
          "displayName": "Custom Network Security Group"
        },
        "properties": {
          "securityRules": [
            {
              "name": "default-allow-ssh",
              "properties": {
                "description": "Allow SSH",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound"
              }
            },
            {
              "name": "default-allow-wildfly-admin",
              "properties": {
                "description": "Allow WildFly/ADMIN",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "9990",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1020,
                "direction": "Inbound"
              }
            },
            {
              "name": "default-allow-wildfly",
              "properties": {
                "description": "Allow WEB/WildFly",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "8080",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1010,
                "direction": "Inbound"
              }
            }
          ]
        }
      },
      {
        "apiVersion": "2019-11-01",
        "type": "Microsoft.Network/virtualNetworks",
        "name": "[variables('virtualNetworkName')]",
        "location": "[parameters('location')]",
        "dependsOn": [
          "[concat('Microsoft.Network/networkSecurityGroups/', variables('frontEndNSGName'))]"
        ],
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "[variables('addressPrefix')]"
            ]
          },
          "subnets": [
            {
              "name": "[variables('subnet1Name')]",
              "properties": {
                "addressPrefix": "[variables('subnet1Prefix')]",
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('frontEndNSGName'))]"
                }
              }
            }
          ]
        }
      },
      {
        "apiVersion": "2019-11-01",
        "type": "Microsoft.Network/networkInterfaces",
        "name": "[variables('nicName')]",
        "location": "[parameters('location')]",
        "dependsOn": [
          "[concat('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))]",
          "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
          "[concat('Microsoft.Network/networkSecurityGroups/', variables('frontEndNSGName'))]"
        ],
        "properties": {
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('frontEndNSGName'))]"
          },
          "ipConfigurations": [
            {
              "name": "ipconfig1",
              "properties": {
                "privateIPAllocationMethod": "Dynamic",
                "publicIPAddress": {
                  "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))]"
                },
                "subnet": {
                  "id": "[variables('subnet1Ref')]"
                }
              }
            }
          ]
        }
      },
      {
        "apiVersion":  "2019-12-01", 
        "type": "Microsoft.Compute/virtualMachines",
        "name": "[variables('vmName')]",
        "location": "[parameters('location')]",
        "dependsOn": [
          "[concat('Microsoft.Storage/storageAccounts/', variables('StorageAccountName'))]",
          "[concat('Microsoft.Network/networkInterfaces/', variables('nicName'))]"
        ],
        "properties": {
          "hardwareProfile": {
            "vmSize": "[parameters('vmSize')]"
          },
          "osProfile": {
            "computerName": "[variables('vmName')]",
            "adminUsername": "[parameters('adminUsername')]",
            "adminPassword": "[parameters('adminPassword')]",
            "customData": "[base64(variables('publicIPAddressName'))]"
          },
          "storageProfile": {
            "imageReference": {
              "publisher": "[variables('imagePublisher')]",
              "offer": "[variables('imageOffer')]",
              "sku": "[variables('imageSKU')]",
              "version": "latest"
            },
            "osDisk": {
              "name": "[concat(variables('vmName'),'_OSDisk')]",
              "caching": "ReadWrite",
              "createOption": "FromImage"
            }
          },
          "networkProfile": {
            "networkInterfaces": [
              {
                "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('nicName'))]"
              }
            ]
          }
        }
      },
      {
        "type": "Microsoft.Compute/virtualMachines/extensions",
        "name": "[concat(variables('vmName'),'/newuserscript')]",
        "apiVersion": "2019-12-01",
        "location": "[parameters('location')]",
        "dependsOn": [
          "[concat('Microsoft.Compute/virtualMachines/', variables('vmName'))]"
        ],
        "properties": {
          "publisher": "Microsoft.Azure.Extensions",
          "type": "CustomScript",
          "typeHandlerVersion": "2.0",
          "autoUpgradeMinorVersion": true,
          "settings": {
            "fileUris": [
              "[concat(parameters('_artifactsLocation'), '/', variables('ScriptFolder'), '/', variables('ScriptFileName'), parameters('_artifactsLocationSasToken'))]"
            ],
            "commandToExecute": "[concat('sh wildfly-setup-redhat.sh',' ',parameters('adminUsername'),' ',parameters('wildflyUserName'),' ',variables('singlequote'),parameters('wildflyPassword'),variables('singlequote'),' ',variables('escapedQuote'),parameters('sshKeyData'),variables('escapedQuote'))]"
          }
        }
      }
    ]
  }
